v0.13
	* ADD : Single mouse button preference (closes #1314)
	* ADD : Tag Templates (closes #1031)
	* ADD : "Area" type to tag selector (matches closed roads); Use as "Type is Area".
	* ADD : context menu to the slippy map to reset viewport to default (as a side effect, disable right mouse click for zoomout)
	* ADD : "locked selection". Pressing "Tab" enters lock mode. In this mode, only the features around last click can be selected. Repeatedly press "Tab" to select them in cycle.
	* ADD : when hovering/focussing a feature, its parents appear in dotted lines
	* FIX : initial viewport is really the one from previous session
	* FIX : Verify selection is in layer before accessing (closes #1250)
	* FIX : After coming out of fullscreen, revert to previous state rather than showing all docks
	* FIX : do not unselect newly created features
	* FIX : make moving images to start of track work
	* ADD : GPX tracks are split if trkpts are more than a certain distance apart (configurable)
	* ADD : update info dock on hover
	* ADD : KML import
	* ADD : display layer name in node info
	* ADD : Shortcut editor
	* FIX : crash after undo roundabout (closes #1218)
	* ADD : enhanced Goto dialog
	* ADD : add "Area" label option to the style editor (handle road label as trackpoints, with anchor at the center of the bounding box)
	* ADD : add support for MTK-based GPSes
	* ADD : add "Halo" label option to the style editor
	* ADD : make focus and hover size configurable
	* FIX : Windows crash when resaving changed scene truncates save file (closes #1164)
	* ADD : Move to the next field on enter in properties dock tags - part 2 (by Travers Carter) (closes #1137)
v0.12
	* FIX : upload of nodes coming from tracks
	* FIX : full zoom drawing bug yahoo images don't scale (fixes #1173)
	* FIX : scroll redraw bug yahoo images don't redraw (fixes #1172)
	* FIX : scroll redraw bug streetnames left behind (fixes #1171)
	* FIX : limit max zoom to a scale of ~2m to avoid overflow